--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   </head>
   <body>
     <nav>
+      <img
+        src="/modul-2/zuhause/src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg"
+        alt="background"
+        style="background-size: cover"
+      />
       <input type="checkbox" id="burger" />
       <label for="burger"></label>
       <div>
