--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav>
       <img
-        src="/modul-2/zuhause/src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg"
+        src="./src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg"
         alt="background"
         style="background-size: cover"
       />
