--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
   </head>
   <body>
     <nav>
-      <img
+      <!-- <img
         src="./src/img/anton-darius-wRMvOZ1CufQ-unsplash.jpg"
         alt="background"
-        style="background-size: cover"
-      />
+      /> -->
       <input type="checkbox" id="burger" />
       <label for="burger"></label>
       <div>
