--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         necessitatibus quae hic provident! Cupiditate accusamus dolorum
         laboriosam cum totam perspiciatis, aliquam consequatur ullam nulla minus
         deserunt vel facere vero quo esse placeat quas impedit minima expedita
-        tempora aperiam eligendi! Fuga sunt vel voluptatum numquam cupiditate
-        placeat repellendus repellat enim aut. Impedit iure itaque pariatur,
-        maiores ut repellat sit quis porro nemo?
+        tempora aperiam eligendi!
       </p>
     </main>
 
